--- a/greeting-service/application-prod.yaml
+++ b/greeting-service/application-prod.yaml
@@ -6,7 +6,7 @@ spring:
     name: greeting-service
 
 greeting-service:
-  greeting: "Ciao"
+  greeting: "Pronto"
   default-value: "Mondo"
 
 management:
